adapt shaker tutorial

--- a/src/app/shaker-game/shaker-game.component.html
+++ b/src/app/shaker-game/shaker-game.component.html
@@ -4,26 +4,47 @@
     <button (click)="up()">Hoch</button>
     <button (click)="down()">Runter</button>
 </div> -->
-
-<div *ngIf="playing && devControls">
-    <!-- <button (click)="hit()">Hit</button> -->
-    <button style="margin-top: 20px;" (click)="shake()">Schütteln</button>
+<div *ngIf="playing">
+    <div *ngIf="devControls">
+        <!-- <button (click)="hit()">Hit</button> -->
+        <button style="margin-top: 20px;" (click)="shake()">Schütteln</button>
+        <!-- <button style="text-align: right;"(click)="quitGame()">Abbrechen</button>  -->
+    </div>
     <button style="text-align: right;"(click)="quitGame()">Abbrechen</button> 
+    <!-- <button *ngIf="devControls || controllerNumber==1" style="margin-left: 200px; text-align: right;"(click)="quitGame()">Abbrechen</button>  -->
+    <!-- <img src="assets/shaker/move.png" alt="screen" style="padding: 10px; margin-top: 60%;" *ngIf="playing && moving"> -->
+    <img src="assets/shaker/shake-phone.gif" alt="screen" style="padding: 10px; margin-top: 40%;" *ngIf="playing && !moving">
 </div>
 
-<!-- <img src="assets/shaker/move.png" alt="screen" style="padding: 10px; margin-top: 60%;" *ngIf="playing && moving"> -->
-<img src="assets/shaker/shake-phone.gif" alt="screen" style="padding: 10px; margin-top: 40%;" *ngIf="playing && !moving">
+<div *ngIf="!tutorial && !playing && !played" style="color: white; text-align: center; margin-top: 100px; padding: 20px;">
+    <p style="font-size: 40px;">
+        <span>Schau nach vorne zum TV. Warte</span>
+        <span *ngIf="dots == 3">...</span>
+        <span *ngIf="dots == 2">..&nbsp;</span>
+        <span *ngIf="dots == 1">.&nbsp;&nbsp;</span>
+        <span *ngIf="dots == 0">&nbsp;&nbsp;&nbsp;</span>
+    </p>
+    <!-- <img src="assets/catcher/pointing-center.jpg" alt="Handy zur Mitte" style="padding: 5px; height: 200px;"> -->
+</div>
+
+<!-- <div *ngIf="!tutorial && !playing && !played" style="color: white; text-align: center; margin-top: 100px; padding: 20px;">
+    <span>Warte, bis alle die Spielanleitung abgeschlossen haben</span>
+    <span *ngIf="dots == 3">...</span>
+    <span *ngIf="dots == 2">..&nbsp;</span>
+    <span *ngIf="dots == 1">.&nbsp;&nbsp;</span>
+    <span *ngIf="dots == 0">&nbsp;&nbsp;&nbsp;</span>
+</div> -->
 
 
 <div *ngIf="tutorial" style="color: white; margin-top: 0px;">
-    <button style="margin-top: 5px;" (click)="endTutorial()">Überspringen</button>
+    <!-- <button style="margin-top: 5px;" (click)="endTutorial()">Überspringen</button> -->
     <ion-slides #slides [options]="slideOptions">
         <ion-slide style="padding: 5px;">
             <p style="font-size: 35px;">Schütteln!</p>
             <p>In diesem Spiel musst du dein Handy schütteln.</p>
             <!-- <p style="font-size: 12px; line-height: 15px;">Sammelt nur Zutaten, die ihr braucht.</p> -->
             <!-- <p style="font-size: 12px; line-height: 15px;">Los geht's!</p> -->
-            <img src="assets/shaker/shake-phone.gif" alt="screen" style="padding: 10px; height: 200px;">
+            <img src="assets/shaker/shake-phone.gif" alt="Handy schütteln" style="padding: 10px; height: 200px;">
             <div class="myButton" style="text-align: center;" (click)="slides.slideNext()">
                 <p style="margin: 0px;">Weiter</p>
             </div>
@@ -31,20 +52,24 @@
         <ion-slide style="padding: 5px;">
             <p style="font-size: 35px;">Früchte herunterschütteln</p>
             <!-- <p style="font-size: 12px; line-height: 15px;">Wenn du fest schüttelst, fallen Früchte von den Bäumen.</p> -->
-            <p style="font-size: 20px;">Wenn ihr schüttelt, fallen die Früchte. Schüttelt so viele wie möglich herunter!</p>
-            <img src="assets/shaker/screen.png" alt="screen" style="padding: 5px; height: 200px;">
+            <!-- <p>Wenn ihr schüttelt, fallen die Früchte. Schüttelt so viele wie möglich herunter!</p> -->
+            <p>Schüttelt alle gemeinsam, damit viele Früchte fallen.</p>
+            <!-- <p>Ihr spielt gemeinsam als Team!</p> -->
+            <!-- <img src="assets/shaker/screen.png" alt="screen" style="padding: 5px; height: 200px;"> -->
+            <img src="assets/shaker/fruit-falling.jpg" alt="fallende Früchte" style="padding: 5px; height: 200px;">
             <div class="myButton" style="text-align: center;" (click)="slides.slideNext()">
                 <p style="margin: 0px;">Weiter</p>
             </div>
         </ion-slide>
         <ion-slide style="padding: 5px;">
-            <p style="font-size: 40px;">Aber Achtung!</p>
+            <p style="font-size: 35px;">Achtung: Zutatenliste</p>
             <!-- <p style="font-size: 12px; line-height: 15px;">Wenn du fest schüttelst, fallen Früchte von den Bäumen.</p> -->
-            <p style="font-size: 20px;">Sammelt nur die Früchte, die links auf der Liste stehen!</p>
-            <img src="assets/shaker/screen.png" alt="screen" style="padding: 5px; height: 200px;">
+            <p>Schüttle nur die Früchte herunter, die auf der Liste stehen!</p>
+            <!-- <img src="assets/shaker/screen.png" alt="screen" style="padding: 5px; height: 200px;"> -->
+            <img src="assets/catcher/ingredient-list2.jpg" alt="Liste" style="padding: 5px; height: 200px;">
             <!-- <p style="font-size: 20px;">Wie viele Becher Saft schafft ihr?</p> -->
             <div class="myButton" style="text-align: center;" (click)="endTutorial()">
-                <p style="margin: 0px;">Los geht's!</p>
+                <p style="margin: 0px;">Bin bereit!</p>
             </div>
         </ion-slide>
         <!-- <ion-slide *ngIf="!moving" style="padding: 10px;">
@@ -68,14 +93,9 @@
             </div>
         </ion-slide> -->
     </ion-slides>
-</div>
-
-<div *ngIf="!tutorial && !playing && !played" style="color: white; text-align: center; margin-top: 100px; padding: 20px;">
-    <span>Warte, bis alle die Spielanleitung abgeschlossen haben</span>
-    <span *ngIf="dots == 3">...</span>
-    <span *ngIf="dots == 2">..&nbsp;</span>
-    <span *ngIf="dots == 1">.&nbsp;&nbsp;</span>
-    <span *ngIf="dots == 0">&nbsp;&nbsp;&nbsp;</span>
+    <button style="position:absolute; margin-left: 150px; text-align: center; font-size: 28px; padding: 5px; margin-top: 40px;" (click)="endTutorial()">
+        Überspringen
+    </button>
 </div>
 
 <div *ngIf="showMainMenuButton && played" class="myButton" style="margin-top: 100px; text-align: center;" (click)="goToMainMenu()">
