--- a/src/app/catcher-game/catcher-game.component.html
+++ b/src/app/catcher-game/catcher-game.component.html
@@ -1,118 +1,126 @@
 <div *ngIf="playing">
-    <div *ngIf="devControls">
-        <button style="margin-top: 20px;" (click)="left()">Links</button>
-        <button style="margin-top: 20px;" (click)="center()">Mitte</button>
-        <button style="margin-top: 20px;" (click)="right()">Rechts</button>
-    </div>
-    <button *ngIf="devControls || controllerNumber==1" style="margin-left: 200px; text-align: right;"(click)="quitGame()">Abbrechen</button> 
-    <div style="display: flex; align-items: center; justify-content: center; background-color: #F38C2C" *ngIf="controllerNumber==1">
-        <img *ngIf="controllerNumber==1" src="assets/catcher/NetOrange.png" alt="Oranges Netz bewegen" style="padding: 50px; margin-top: 50%;">
-    </div>
-    <div style="display: flex; align-items: center; justify-content: center; height: 100%; background-color: #4CAF50" *ngIf="controllerNumber==2">
-        <img *ngIf="controllerNumber==2" src="assets/catcher/NetLightGreen.png" alt="Grünes Netz bewegen" style="padding: 50px; margin-top: 50%;">
-    </div>
-    <div style="display: flex; align-items: center; justify-content: center; height: 100%" *ngIf="controllerNumber==undefined">
-        <img *ngIf="controllerNumber==undefined" src="assets/catcher/net.png" alt="Netz bewegen" style="padding: 50px; margin-top: 50%;">
-    </div>
+  <div *ngIf="devControls">
+    <button style="margin-top: 20px;" (click)="left()">Links</button>
+    <button style="margin-top: 20px;" (click)="center()">Mitte</button>
+    <button style="margin-top: 20px;" (click)="right()">Rechts</button>
+  </div>
+  <button *ngIf="devControls || controllerNumber==1" style="margin-left: 200px; text-align: right;"
+    (click)="quitGame()">Abbrechen</button>
+  <div style="display: flex; align-items: center; justify-content: center; background-color: #F38C2C"
+    *ngIf="controllerNumber==1">
+    <img *ngIf="controllerNumber==1" src="assets/catcher/NetOrange.png" alt="Oranges Netz bewegen"
+      style="padding: 50px; margin-top: 50%;">
+  </div>
+  <div style="display: flex; align-items: center; justify-content: center; height: 100%; background-color: #4CAF50"
+    *ngIf="controllerNumber==2">
+    <img *ngIf="controllerNumber==2" src="assets/catcher/NetLightGreen.png" alt="Grünes Netz bewegen"
+      style="padding: 50px; margin-top: 50%;">
+  </div>
+  <div style="display: flex; align-items: center; justify-content: center; height: 100%"
+    *ngIf="controllerNumber==undefined">
+    <img *ngIf="controllerNumber==undefined" src="assets/catcher/net.png" alt="Netz bewegen"
+      style="padding: 50px; margin-top: 50%;">
+  </div>
 </div>
 
-<div *ngIf="!tutorial && !playing && !played" style="color: white; text-align: center; margin-top: 100px; padding: 20px;">
+<div *ngIf="!tutorial && !playing && !played"
+  style="color: white; text-align: center; margin-top: 100px; padding: 20px;">
   <p style="font-size: 40px;">
-      <span>Halte dein Handy mittig zum TV. Warte</span>
-      <span *ngIf="dots == 3">...</span>
-      <span *ngIf="dots == 2">..&nbsp;</span>
-      <span *ngIf="dots == 1">.&nbsp;&nbsp;</span>
-      <span *ngIf="dots == 0">&nbsp;&nbsp;&nbsp;</span>
-  </p>
-  <img src="assets/catcher/pointing-center.jpg" alt="Handy zur Mitte" style="padding: 5px; height: 200px;">
-</div>
-
-<div *ngIf="tutorial" style="color: white; margin-top: 0px;">
-    <ion-slides #slides [options]="slideOptions">
-        <ion-slide style="padding: 5px;">
-            <p style="font-size: 35px;">Handy wie Fernbedienung</p>
-            <p>Halte dein Handy wie eine Fernbedienung zum TV.</p>
-            <img src="assets/catcher/remote-control.jpg" alt="Fernbedienung" style="padding: 10px; height: 200px;">
-            <div class="myButton" style="text-align: center;" (click)="slides.slideNext()">
-                <p style="margin: 0px;">Weiter</p>
-            </div>
-        </ion-slide>
-        <ion-slide style="padding: 5px;">
-            <p style="font-size: 35px;">Handy ausrichten</p>
-            <p>Du kannst dein Handy nach links, mittig oder rechts ausrichten.</p>
-            <img src="assets/catcher/pointing-directions.jpg" alt="Zeige-Richtungen Handy" style="padding: 10px; height: 200px;">
-            <div class="myButton" style="text-align: center;" (click)="slides.slideNext()">
-                <p style="margin: 0px;">Weiter</p>
-            </div>
-        </ion-slide>
-        <ion-slide style="padding: 5px;">
-            <p style="font-size: 35px;">Netz</p>
-            <p>So bewegst du dein Netz.</p>
-            <img src="assets/catcher/pointing-directions-net2.jpg" alt="Zeige-Richtungen Netz" style="padding: 10px; height: 200px;">
-            <div class="myButton" style="text-align: center;" (click)="slides.slideNext()">
-                <p style="margin: 0px;">Weiter</p>
-            </div>
-        </ion-slide>
-        <ion-slide style="padding: 5px;">
-            <p style="font-size: 35px;">Früchte auffangen</p>
-            <p style="font-size: 20px;">Fange mit deinem Netz die fallenden Früchte auf.</p>
-            <p style="font-size: 20px;">Ihr fangt gemeinsam als Team!</p>
-            <div style="display: flex; align-items: center; justify-content: center;">
-                <img src="assets/catcher/falling-fruits2.jpg" alt="Fallende Früchte" style="padding: 5px; height: 200px;">
-                <!-- <img *ngIf="controllerNumber==1" src="assets/catcher/NetOrange.png" alt="Oranges Netz bewegen" style="padding: 5px; height: 200px;">
-                <img *ngIf="controllerNumber==2" src="assets/catcher/NetLightGreen.png" alt="Grünes Netz bewegen" style="padding: 5px; height: 200px;">
-                <img *ngIf="controllerNumber==undefined" src="assets/catcher/net.png" alt="Netz bewegen" style="padding: 5px; height: 200px;"> -->
-            </div>
-            <div class="myButton" style="text-align: center;" (click)="slides.slideNext()">
-                <p style="margin: 0px;">Weiter</p>
-            </div>
-        </ion-slide>
-        <ion-slide style="padding: 5px;">
-            <p style="font-size: 35px;">Achtung: Zutatenliste</p>
-            <p style="font-size: 20px;">Fange nur die Früchte, die auf der Liste stehen!</p>
-            <img src="assets/catcher/ingredient-list2.jpg" alt="Liste" style="padding: 5px; height: 200px;">
-            <!-- <p style="font-size: 20px;">Wie viele Becher Saft schafft ihr?</p> -->
-            <div class="myButton" style="text-align: center;" (click)="slides.slideNext()">
-                <p style="margin: 0px;">Weiter</p>
-            </div>
-        </ion-slide>
-        <ion-slide style="padding: 5px;">
-            <p style="font-size: 35px;">Netzfarbe</p>
-            <p>Dein Netz hat diese Farbe:</p>
-            <div style="display: flex; align-items: center; justify-content: center">
-                <img *ngIf="controllerNumber==1" src="assets/catcher/NetOrange.png" alt="Oranges Netz bewegen" style="padding: 5px; height: 200px;">
-                <img *ngIf="controllerNumber==2" src="assets/catcher/NetLightGreen.png" alt="Grünes Netz bewegen" style="padding: 5px; height: 200px;">
-                <img *ngIf="controllerNumber==undefined" src="assets/catcher/net.png" alt="Netz bewegen" style="padding: 5px; height: 200px;">
-            </div>
-            <!-- <p style="font-size: 20px;">Ihr spielt gemeinsam als Team!</p> -->
-            <div class="myButton" style="text-align: center;" (click)="slides.slideNext()">
-                <p style="margin: 0px;">Weiter</p>
-            </div>
-        </ion-slide>
-        <ion-slide style="padding: 5px;">
-            <p style="font-size: 40px;">Handy zur Mitte</p>
-            <p style="font-size: 20px;">Halte dein Handy Richtung Mitte des TVs, bis der Countdown abgelaufen ist und das Spiel beginnt.</p>
-            <img src="assets/catcher/pointing-center.jpg" alt="Handy zur Mitte" style="padding: 5px; height: 200px;">
-            <!-- <p style="font-size: 20px;">Bereit?</p> -->
-            <div class="myButton" style="text-align: center;" (click)="endTutorial()">
-                <p style="margin: 0px;">Bin bereit!</p>
-            </div>
-        </ion-slide>   
-    </ion-slides>
-    <button style="position:absolute; margin-left: 150px; text-align: center; font-size: 28px; padding: 5px; margin-top: 40px;" (click)="endTutorial()">
-        Überspringen
-    </button>
-</div>
-
-<div *ngIf="showMainMenuButton && played" class="myButton" style="margin-top: 100px; text-align: center;" (click)="goToMainMenu()">
-    <p style="margin: 0px;">Hauptmenü</p>
-</div>
-
-<div *ngIf="!showMainMenuButton && played" style="color: white; text-align: center; margin-top: 100px; padding: 20px;">
-    <span>Warte, bis der Spielleiter zum Hauptmenü gewechselt hat</span>
+    <span>Halte dein Handy mittig zum TV. Warte</span>
     <span *ngIf="dots == 3">...</span>
     <span *ngIf="dots == 2">..&nbsp;</span>
     <span *ngIf="dots == 1">.&nbsp;&nbsp;</span>
     <span *ngIf="dots == 0">&nbsp;&nbsp;&nbsp;</span>
+  </p>
+  <img src="assets/catcher/pointing-center.jpg" alt="Handy zur Mitte">
 </div>
 
+<div *ngIf="tutorial" style="color: white; margin-top: 0px;">
+  <ion-slides #slides [options]="slideOptions">
+    <ion-slide>
+      <p style="font-size: 35px;">Handy wie Fernbedienung</p>
+      <p>Halte dein Handy wie eine Fernbedienung zum TV.</p>
+      <img src="assets/catcher/remote-control.jpg" alt="Fernbedienung">
+      <div class="myButton nextButton" (click)="slides.slideNext()">
+        <p>Weiter &#8594;</p>
+      </div>
+    </ion-slide>
+    <ion-slide>
+      <p style="font-size: 35px;">Handy ausrichten</p>
+      <p>Du kannst dein Handy nach links, mittig oder rechts ausrichten.</p>
+      <img src="assets/catcher/pointing-directions.jpg" alt="Zeige-Richtungen Handy">
+      <div class="myButton nextButton" (click)="slides.slideNext()">
+        <p>Weiter &#8594;</p>
+      </div>
+    </ion-slide>
+    <ion-slide>
+      <p style="font-size: 35px;">Netz</p>
+      <p>So bewegst du dein Netz.</p>
+      <img src="assets/catcher/pointing-directions-net2.jpg" alt="Zeige-Richtungen Netz">
+      <div class="myButton nextButton" (click)="slides.slideNext()">
+        <p>Weiter &#8594;</p>
+      </div>
+    </ion-slide>
+    <ion-slide>
+      <p style="font-size: 35px;">Früchte auffangen</p>
+      <p>
+        Fange die fallenden Früchte.
+        Ihr spielt als Team!
+      </p>
+      <div style="display: flex; align-items: center; justify-content: center;">
+        <img src="assets/catcher/falling-fruits2.jpg" alt="Fallende Früchte" style="height: 240px;">
+      </div>
+      <div class="myButton nextButton" (click)="slides.slideNext()">
+        <p>Weiter &#8594;</p>
+      </div>
+    </ion-slide>
+    <ion-slide>
+      <p style="font-size: 35px;">Achtung: Zutatenliste</p>
+      <p>Fange nur die Früchte, die auf der Liste stehen!</p>
+      <img src="assets/catcher/ingredient-list2.jpg" alt="Liste">
+      <div class="myButton nextButton" (click)="slides.slideNext()">
+        <p>Weiter &#8594;</p>
+      </div>
+    </ion-slide>
+    <ion-slide>
+      <p style="font-size: 35px;">Netzfarbe</p>
+      <p>Dein Netz hat diese Farbe:</p>
+      <div style="display: flex; align-items: center; justify-content: center">
+        <img *ngIf="controllerNumber==1" src="assets/catcher/NetOrange.png" alt="Oranges Netz bewegen">
+        <img *ngIf="controllerNumber==2" src="assets/catcher/NetLightGreen.png" alt="Grünes Netz bewegen">
+        <img *ngIf="controllerNumber==undefined" src="assets/catcher/net.png" alt="Netz bewegen">
+      </div>
+      <div class="myButton nextButton" (click)="slides.slideNext()">
+        <p>Weiter &#8594;</p>
+      </div>
+    </ion-slide>
+    <ion-slide>
+      <p style="font-size: 35px;">Handy zur Mitte</p>
+      <p>Halte dein Handy Richtung Mitte des TVs, bis der Countdown abgelaufen ist und das
+        Spiel beginnt.</p>
+      <img src="assets/catcher/pointing-center.jpg" alt="Handy zur Mitte">
+      <div class="myButton nextButton" (click)="endTutorial()">
+        <p>Bin bereit!</p>
+      </div>
+    </ion-slide>
+    <!-- <div class="myButton nextButton" (click)="slides.slideNext()">
+      <p>Weiter &#8594;</p>
+    </div> -->
+  </ion-slides>
+  <div class="myButton nextButton skipButton" (click)="endTutorial()">
+    <p>Überspringen &#8677;</p>
+  </div>
+</div>
+
+<div *ngIf="showMainMenuButton && played" class="myButton" style="margin-top: 100px; text-align: center;"
+  (click)="goToMainMenu()">
+  <p>Hauptmenü</p>
+</div>
+
+<div *ngIf="!showMainMenuButton && played" style="color: white; text-align: center; margin-top: 100px; padding: 20px;">
+  <span>Warte, bis der Spielleiter zum Hauptmenü gewechselt hat</span>
+  <span *ngIf="dots == 3">...</span>
+  <span *ngIf="dots == 2">..&nbsp;</span>
+  <span *ngIf="dots == 1">.&nbsp;&nbsp;</span>
+  <span *ngIf="dots == 0">&nbsp;&nbsp;&nbsp;</span>
+</div>
