--- a/src/app/shaker-game/shaker-game.component.html
+++ b/src/app/shaker-game/shaker-game.component.html
@@ -10,13 +10,15 @@
         <button style="margin-top: 20px;" (click)="shake()">Schütteln</button>
         <!-- <button style="text-align: right;"(click)="quitGame()">Abbrechen</button>  -->
     </div>
-    <button style="text-align: right;"(click)="quitGame()">Abbrechen</button> 
+    <button style="text-align: right;" (click)="quitGame()">Abbrechen</button>
     <!-- <button *ngIf="devControls || controllerNumber==1" style="margin-left: 200px; text-align: right;"(click)="quitGame()">Abbrechen</button>  -->
     <!-- <img src="assets/shaker/move.png" alt="screen" style="padding: 10px; margin-top: 60%;" *ngIf="playing && moving"> -->
-    <img src="assets/shaker/shake-phone.gif" alt="screen" style="padding: 10px; margin-top: 40%;" *ngIf="playing && !moving">
+    <img src="assets/shaker/shake-phone.gif" alt="screen" style="padding: 10px; margin-top: 40%;"
+        *ngIf="playing && !moving">
 </div>
 
-<div *ngIf="!tutorial && !playing && !played" style="color: white; text-align: center; margin-top: 100px; padding: 20px;">
+<div *ngIf="!tutorial && !playing && !played"
+    style="color: white; text-align: center; margin-top: 100px; padding: 20px;">
     <p style="font-size: 40px;">
         <span>Schau nach vorne zum TV. Warte</span>
         <span *ngIf="dots == 3">...</span>
@@ -39,37 +41,37 @@
 <div *ngIf="tutorial" style="color: white; margin-top: 0px;">
     <!-- <button style="margin-top: 5px;" (click)="endTutorial()">Überspringen</button> -->
     <ion-slides #slides [options]="slideOptions">
-        <ion-slide style="padding: 5px;">
+        <ion-slide>
             <p style="font-size: 35px;">Schütteln!</p>
             <p>In diesem Spiel musst du dein Handy schütteln.</p>
             <!-- <p style="font-size: 12px; line-height: 15px;">Sammelt nur Zutaten, die ihr braucht.</p> -->
             <!-- <p style="font-size: 12px; line-height: 15px;">Los geht's!</p> -->
-            <img src="assets/shaker/shake-phone.gif" alt="Handy schütteln" style="padding: 10px; height: 200px;">
-            <div class="myButton" style="text-align: center;" (click)="slides.slideNext()">
-                <p style="margin: 0px;">Weiter</p>
+            <img src="assets/shaker/shake-phone.gif" alt="Handy schütteln">
+            <div class="myButton nextButton" (click)="slides.slideNext()">
+                <p>Weiter &#8594;</p>
             </div>
         </ion-slide>
-        <ion-slide style="padding: 5px;">
+        <ion-slide>
             <p style="font-size: 35px;">Früchte herunterschütteln</p>
             <!-- <p style="font-size: 12px; line-height: 15px;">Wenn du fest schüttelst, fallen Früchte von den Bäumen.</p> -->
             <!-- <p>Wenn ihr schüttelt, fallen die Früchte. Schüttelt so viele wie möglich herunter!</p> -->
-            <p>Schüttelt alle gemeinsam, damit viele Früchte fallen.</p>
+            <p>Schüttelt gemeinsam, damit viele Früchte fallen.</p>
             <!-- <p>Ihr spielt gemeinsam als Team!</p> -->
             <!-- <img src="assets/shaker/screen.png" alt="screen" style="padding: 5px; height: 200px;"> -->
-            <img src="assets/shaker/fruit-falling.jpg" alt="fallende Früchte" style="padding: 5px; height: 200px;">
-            <div class="myButton" style="text-align: center;" (click)="slides.slideNext()">
-                <p style="margin: 0px;">Weiter</p>
+            <img src="assets/shaker/fruit-falling.jpg" alt="fallende Früchte">
+            <div class="myButton nextButton" (click)="slides.slideNext()">
+                <p>Weiter &#8594;</p>
             </div>
         </ion-slide>
-        <ion-slide style="padding: 5px;">
+        <ion-slide>
             <p style="font-size: 35px;">Achtung: Zutatenliste</p>
             <!-- <p style="font-size: 12px; line-height: 15px;">Wenn du fest schüttelst, fallen Früchte von den Bäumen.</p> -->
-            <p>Schüttle nur die Früchte herunter, die auf der Liste stehen!</p>
+            <p>Schüttelt nur die Früchte herunter, die auf der Liste stehen!</p>
             <!-- <img src="assets/shaker/screen.png" alt="screen" style="padding: 5px; height: 200px;"> -->
-            <img src="assets/catcher/ingredient-list2.jpg" alt="Liste" style="padding: 5px; height: 200px;">
+            <img src="assets/catcher/ingredient-list2.jpg" alt="Liste">
             <!-- <p style="font-size: 20px;">Wie viele Becher Saft schafft ihr?</p> -->
-            <div class="myButton" style="text-align: center;" (click)="endTutorial()">
-                <p style="margin: 0px;">Bin bereit!</p>
+            <div class="myButton nextButton" (click)="endTutorial()">
+                <p>Bin bereit!</p>
             </div>
         </ion-slide>
         <!-- <ion-slide *ngIf="!moving" style="padding: 10px;">
@@ -93,13 +95,14 @@
             </div>
         </ion-slide> -->
     </ion-slides>
-    <button style="position:absolute; margin-left: 150px; text-align: center; font-size: 28px; padding: 5px; margin-top: 40px;" (click)="endTutorial()">
-        Überspringen
-    </button>
+    <div class="myButton nextButton skipButton" (click)="endTutorial()">
+        <p>Überspringen &#8677;</p>
+    </div>
 </div>
 
-<div *ngIf="showMainMenuButton && played" class="myButton" style="margin-top: 100px; text-align: center;" (click)="goToMainMenu()">
-    <p style="margin: 0px;">Hauptmenü</p>
+<div *ngIf="showMainMenuButton && played" class="myButton" style="margin-top: 100px; text-align: center;"
+    (click)="goToMainMenu()">
+    <p>Hauptmenü</p>
 </div>
 
 <div *ngIf="!showMainMenuButton && played" style="color: white; text-align: center; margin-top: 100px; padding: 20px;">
@@ -109,4 +112,3 @@
     <span *ngIf="dots == 1">.&nbsp;&nbsp;</span>
     <span *ngIf="dots == 0">&nbsp;&nbsp;&nbsp;</span>
 </div>
-
