--- a/src/app/shaker-game/shaker-game.component.scss
+++ b/src/app/shaker-game/shaker-game.component.scss
@@ -1,33 +1,70 @@
 ion-slides {
-    --bullet-background: blue;
-    --bullet-background-active: darkblue;
+  --bullet-background: blue;
+  --bullet-background-active: darkblue;
 }
 
 ion-slides {
-    height: 100%;
-  }
+  height: 100%;
+}
 
-  p {
-    font-size: 25px;
-  }
+p {
+  font-size: 25px;
+}
 
-  .swiper-slide {
-    display: block;
-  }
+.swiper-slide {
+  display: block;
+  height: 520px;
+  padding: 10px 15px;
+}
 
-  .swiper-slide h2 {
-    margin-top: 2.8rem;
-  }
+.swiper-slide h2 {
+  margin-top: 2.8rem;
+}
 
-  .myButton {
-    color: white;
-    width: 196px;
-    height: 40px;
-    border: 3px solid white;
-    line-height: 40px;
-    margin: auto
-  }
+.swiper-slide img {
+  height: 200px;
+  padding: 10px;
+}
 
-  #point{
-      transition: .3s ease-in-out;
-  }
+.myButton {
+  color: white;
+  background-color: rgb(3, 122, 122);
+  width: 196px;
+  // height: 40px;
+  // border: 4px solid rgb(0, 97, 97);
+  border-radius: 5px;
+  box-shadow: 0px 1.5px rgb(169, 194, 201);
+  line-height: 45px;
+  margin: auto;
+  text-align: center;
+}
+
+.myButton > p {
+  margin: 0px;
+}
+
+.nextButton {
+  position: absolute;
+  margin-left: auto;
+  left: 0;
+  margin-right: auto;
+  right: 0;
+  bottom: 10px;
+}
+
+.skipButton {
+  background-color: rgb(73, 84, 87);
+  width: 150px;
+  bottom: 10px;
+  right: 10px;
+  margin-right: 0px;
+}
+
+.skipButton > p {
+  margin: 0px;
+  font-size: 18px;
+}
+
+#point {
+  transition: 0.3s ease-in-out;
+}
